Add Condition actions put it all together to get some level of validation of environment variables.

--- a/test.yaml
+++ b/test.yaml
@@ -6,10 +6,10 @@ constraints:
         pattern: ALL
         condition: UNIQUE
     - db-strings-have-prefix:
-        pattern: db-connection-string-*+
+        pattern: db-connection-string-.*
         condition: HasPrefix(jdbc://a.domain.to.db/)
     - has-test-suffix:
-        pattern: test-param-*+
+        pattern: test-param-.*
         condition: HasSuffix(test)
     - ports-are-numeric:
         pattern: "-port"
@@ -17,3 +17,6 @@ constraints:
     - debug-is-boolean:
         pattern: debug
         condition: IsBoolean
+    - vscode-properties:
+        pattern: VSCODE_.*
+        condition: IsNumeric
