Add GCP support. Update interface and validation to fail early if theres any configuration issues before running the validation.

--- a/test.yaml
+++ b/test.yaml
@@ -1,6 +1,8 @@
 credential-providers:
-  # - GCP
-  - Env
+  - GCP:
+        project-id: <project_id>
+        credential-file-path: C:\Users\<user>\AppData\Roaming\gcloud\<credentials>.json
+  - Env:
 constraints:
     - all-are-unique:
         pattern: ALL
